--- a/notes/csharp.html
+++ b/notes/csharp.html
@@ -73,87 +73,87 @@
             <li>
                 <text style="font-size: 30px;">C#基础</text>
                 <ul>
-                    <li><a href="c#/0001.html" class="content" target="_blank"> 01 变量的类型.cs</a></li>
-                    <li><a href="c#/0002.html" class="content" target="_blank"> 02 赋值运算符.cs</a></li>
-                    <li><a href="c#/0003.html" class="content" target="_blank"> 03 占位符.cs</a></li>
-                    <li><a href="c#/0004.html" class="content" target="_blank"> 04 交换变量.cs</a></li>
-                    <li><a href="c#/0005.html" class="content" target="_blank"> 05 接收用户输入.cs</a></li>
-                    <li><a href="c#/0006.html" class="content" target="_blank"> 06 转义符和@.cs</a></li>
-                    <li><a href="c#/0007.html" class="content" target="_blank"> 07 算术运算符.cs</a></li>
-                    <li><a href="c#/0008.html" class="content" target="_blank"> 08 类型转换.cs</a></li>
-                    <li><a href="c#/0009.html" class="content" target="_blank"> 09 Convert类型转换.cs</a></li>
-                    <li><a href="c#/0010.html" class="content" target="_blank"> 10 自增自减运算符.cs</a></li>
-                    <li><a href="c#/0011.html" class="content" target="_blank"> 11 关系和逻辑运算符.cs</a></li>
-                    <li><a href="c#/0012.html" class="content" target="_blank"> 12 if判断语句.cs</a></li>
-                    <li><a href="c#/0013.html" class="content" target="_blank"> 13 异常捕获.cs</a></li>
-                    <li><a href="c#/0014.html" class="content" target="_blank"> 14 switch语句.cs</a></li>
-                    <li><a href="c#/0015.html" class="content" target="_blank"> 15 while循环.cs</a></li>
-                    <li><a href="c#/0016.html" class="content" target="_blank"> 16 break用法.cs</a></li>
-                    <li><a href="c#/0017.html" class="content" target="_blank"> 17 do-while循环.cs</a></li>
-                    <li><a href="c#/0018.html" class="content" target="_blank"> 18 continue用法.cs</a></li>
-                    <li><a href="c#/0019.html" class="content" target="_blank"> 19 for循环.cs</a></li>
-                    <li><a href="c#/0020.html" class="content" target="_blank"> 20 类型转换方法.cs</a></li>
-                    <li><a href="c#/0021.html" class="content" target="_blank"> 21 三元表达式.cs</a></li>
-                    <li><a href="c#/0022.html" class="content" target="_blank"> 22 常量.cs</a></li>
-                    <li><a href="c#/0023.html" class="content" target="_blank"> 23 枚举.cs</a></li>
-                    <li><a href="c#/0024.html" class="content" target="_blank"> 24 枚举类型相关转换.cs</a></li>
-                    <li><a href="c#/0025.html" class="content" target="_blank"> 25 结构体.cs</a></li>
-                    <li><a href="c#/0026.html" class="content" target="_blank"> 26 数组的定义.cs</a></li>
-                    <li><a href="c#/0027.html" class="content" target="_blank"> 27 方法的使用.cs</a></li>
-                    <li><a href="c#/0028.html" class="content" target="_blank"> 28 方法的调用问题.cs</a></li>
-                    <li><a href="c#/0029.html" class="content" target="_blank"> 29 out参数的使用.cs</a></li>
-                    <li><a href="c#/0030.html" class="content" target="_blank"> 30 out参数实例.cs</a></li>
-                    <li><a href="c#/0031.html" class="content" target="_blank"> 31 ref参数.cs</a></li>
-                    <li><a href="c#/0032.html" class="content" target="_blank"> 32 params可变参数.cs</a></li>
-                    <li><a href="c#/0033.html" class="content" target="_blank"> 33 方法的重载.cs</a></li>
-                    <li><a href="c#/0034.html" class="content" target="_blank"> 34 方法的递归.cs</a></li>
-                    <li><a href="c#/0035.html" class="content" target="_blank"> 35 飞行棋.cs</a></li>
+                    <li><a href="csharp/0001.html" class="content" target="_blank"> 01 变量的类型.cs</a></li>
+                    <li><a href="csharp/0002.html" class="content" target="_blank"> 02 赋值运算符.cs</a></li>
+                    <li><a href="csharp/0003.html" class="content" target="_blank"> 03 占位符.cs</a></li>
+                    <li><a href="csharp/0004.html" class="content" target="_blank"> 04 交换变量.cs</a></li>
+                    <li><a href="csharp/0005.html" class="content" target="_blank"> 05 接收用户输入.cs</a></li>
+                    <li><a href="csharp/0006.html" class="content" target="_blank"> 06 转义符和@.cs</a></li>
+                    <li><a href="csharp/0007.html" class="content" target="_blank"> 07 算术运算符.cs</a></li>
+                    <li><a href="csharp/0008.html" class="content" target="_blank"> 08 类型转换.cs</a></li>
+                    <li><a href="csharp/0009.html" class="content" target="_blank"> 09 Convert类型转换.cs</a></li>
+                    <li><a href="csharp/0010.html" class="content" target="_blank"> 10 自增自减运算符.cs</a></li>
+                    <li><a href="csharp/0011.html" class="content" target="_blank"> 11 关系和逻辑运算符.cs</a></li>
+                    <li><a href="csharp/0012.html" class="content" target="_blank"> 12 if判断语句.cs</a></li>
+                    <li><a href="csharp/0013.html" class="content" target="_blank"> 13 异常捕获.cs</a></li>
+                    <li><a href="csharp/0014.html" class="content" target="_blank"> 14 switch语句.cs</a></li>
+                    <li><a href="csharp/0015.html" class="content" target="_blank"> 15 while循环.cs</a></li>
+                    <li><a href="csharp/0016.html" class="content" target="_blank"> 16 break用法.cs</a></li>
+                    <li><a href="csharp/0017.html" class="content" target="_blank"> 17 do-while循环.cs</a></li>
+                    <li><a href="csharp/0018.html" class="content" target="_blank"> 18 continue用法.cs</a></li>
+                    <li><a href="csharp/0019.html" class="content" target="_blank"> 19 for循环.cs</a></li>
+                    <li><a href="csharp/0020.html" class="content" target="_blank"> 20 类型转换方法.cs</a></li>
+                    <li><a href="csharp/0021.html" class="content" target="_blank"> 21 三元表达式.cs</a></li>
+                    <li><a href="csharp/0022.html" class="content" target="_blank"> 22 常量.cs</a></li>
+                    <li><a href="csharp/0023.html" class="content" target="_blank"> 23 枚举.cs</a></li>
+                    <li><a href="csharp/0024.html" class="content" target="_blank"> 24 枚举类型相关转换.cs</a></li>
+                    <li><a href="csharp/0025.html" class="content" target="_blank"> 25 结构体.cs</a></li>
+                    <li><a href="csharp/0026.html" class="content" target="_blank"> 26 数组的定义.cs</a></li>
+                    <li><a href="csharp/0027.html" class="content" target="_blank"> 27 方法的使用.cs</a></li>
+                    <li><a href="csharp/0028.html" class="content" target="_blank"> 28 方法的调用问题.cs</a></li>
+                    <li><a href="csharp/0029.html" class="content" target="_blank"> 29 out参数的使用.cs</a></li>
+                    <li><a href="csharp/0030.html" class="content" target="_blank"> 30 out参数实例.cs</a></li>
+                    <li><a href="csharp/0031.html" class="content" target="_blank"> 31 ref参数.cs</a></li>
+                    <li><a href="csharp/0032.html" class="content" target="_blank"> 32 params可变参数.cs</a></li>
+                    <li><a href="csharp/0033.html" class="content" target="_blank"> 33 方法的重载.cs</a></li>
+                    <li><a href="csharp/0034.html" class="content" target="_blank"> 34 方法的递归.cs</a></li>
+                    <li><a href="csharp/0035.html" class="content" target="_blank"> 35 飞行棋.cs</a></li>
                 </ul>
             </li>
             <li>
                 <text style="font-size: 30px;">面向对象</text>
                 <ul>
-                    <li><a href="c#/0036.html" class="content" target="_blank"> 01 类的基本语法.cs</a></li>
-                    <li><a href="c#/0037.html" class="content" target="_blank"> 02 属性.cs</a></li>
-                    <li><a href="c#/0038.html" class="content" target="_blank"> 03 静态和非静态.cs</a></li>
-                    <li><a href="c#/0039.html" class="content" target="_blank"> 04 构造函数.cs</a></li>
-                    <li><a href="c#/0040.html" class="content" target="_blank"> 05 this关键字.cs</a></li>
-                    <li><a href="c#/0041.html" class="content" target="_blank"> 06 析构函数.cs</a></li>
-                    <li><a href="c#/0042.html" class="content" target="_blank"> 07 命名空间.cs</a></li>
-                    <li><a href="c#/0043.html" class="content" target="_blank"> 08 值类型和引用类型.cs</a></li>
-                    <li><a href="c#/0044.html" class="content" target="_blank"> 09 字符串的不变性.cs</a></li>
-                    <li><a href="c#/0045.html" class="content" target="_blank"> 10 字符串的方法一.cs</a></li>
-                    <li><a href="c#/0046.html" class="content" target="_blank"> 11 字符串的方法二.cs</a></li>
-                    <li><a href="c#/0047.html" class="content" target="_blank"> 12 继承.cs</a></li>
-                    <li><a href="c#/0048.html" class="content" target="_blank"> 13 new隐藏父类成员.cs</a></li>
-                    <li><a href="c#/0049.html" class="content" target="_blank"> 14 里氏转换.cs</a></li>
-                    <li><a href="c#/0050.html" class="content" target="_blank"> 15 随机整数.cs</a></li>
-                    <li><a href="c#/0051.html" class="content" target="_blank"> 16 ArrayList集合.cs</a></li>
-                    <li><a href="c#/0052.html" class="content" target="_blank"> 17 集合的长度问题.cs</a></li>
-                    <li><a href="c#/0053.html" class="content" target="_blank"> 18 Hashtable集合.cs</a></li>
-                    <li><a href="c#/0054.html" class="content" target="_blank"> 19 Path静态类.cs</a></li>
-                    <li><a href="c#/0055.html" class="content" target="_blank"> 19 简繁转换.cs</a></li>
-                    <li><a href="c#/0056.html" class="content" target="_blank"> 20 File静态类.cs</a></li>
-                    <li><a href="c#/0057.html" class="content" target="_blank"> 21 文件的读写.cs</a></li>
-                    <li><a href="c#/0058.html" class="content" target="_blank"> 22 List泛型集合.cs</a></li>
-                    <li><a href="c#/0059.html" class="content" target="_blank"> 23 装箱和拆箱.cs</a></li>
-                    <li><a href="c#/0060.html" class="content" target="_blank"> 24 字典泛型集合.cs</a></li>
-                    <li><a href="c#/0061.html" class="content" target="_blank"> 25 文件流读写文件.cs</a></li>
-                    <li><a href="c#/0062.html" class="content" target="_blank"> 26 大文件的复制.cs</a></li>
-                    <li><a href="c#/0063.html" class="content" target="_blank"> 26 流读写文件.cs</a></li>
-                    <li><a href="c#/0064.html" class="content" target="_blank"> 27 多态.cs</a></li>
-                    <li><a href="c#/0065.html" class="content" target="_blank"> 28 抽象类.cs</a></li>
-                    <li><a href="c#/0066.html" class="content" target="_blank"> 29 访问权限修饰符.cs</a></li>
-                    <li><a href="c#/0067.html" class="content" target="_blank"> 30 简单工厂设计模式.cs</a></li>
-                    <li><a href="c#/0068.html" class="content" target="_blank"> 31 值传递和引用传递.cs</a></li>
-                    <li><a href="c#/0069.html" class="content" target="_blank"> 32 序列化和反序列化.cs</a></li>
-                    <li><a href="c#/0070.html" class="content" target="_blank"> 33 部分类.cs</a></li>
-                    <li><a href="c#/0071.html" class="content" target="_blank"> 34 密封类.cs</a></li>
-                    <li><a href="c#/0072.html" class="content" target="_blank"> 35 重写ToString.cs</a></li>
-                    <li><a href="c#/0073.html" class="content" target="_blank"> 36 接口简介.cs</a></li>
-                    <li><a href="c#/0074.html" class="content" target="_blank"> 37 接口的特点.cs</a></li>
-                    <li><a href="c#/0075.html" class="content" target="_blank"> 38 显式实现接口.cs</a></li>
-                    <li><a href="c#/0076.html" class="content" target="_blank"> 39 MD5加密.cs</a></li>
+                    <li><a href="csharp/0036.html" class="content" target="_blank"> 01 类的基本语法.cs</a></li>
+                    <li><a href="csharp/0037.html" class="content" target="_blank"> 02 属性.cs</a></li>
+                    <li><a href="csharp/0038.html" class="content" target="_blank"> 03 静态和非静态.cs</a></li>
+                    <li><a href="csharp/0039.html" class="content" target="_blank"> 04 构造函数.cs</a></li>
+                    <li><a href="csharp/0040.html" class="content" target="_blank"> 05 this关键字.cs</a></li>
+                    <li><a href="csharp/0041.html" class="content" target="_blank"> 06 析构函数.cs</a></li>
+                    <li><a href="csharp/0042.html" class="content" target="_blank"> 07 命名空间.cs</a></li>
+                    <li><a href="csharp/0043.html" class="content" target="_blank"> 08 值类型和引用类型.cs</a></li>
+                    <li><a href="csharp/0044.html" class="content" target="_blank"> 09 字符串的不变性.cs</a></li>
+                    <li><a href="csharp/0045.html" class="content" target="_blank"> 10 字符串的方法一.cs</a></li>
+                    <li><a href="csharp/0046.html" class="content" target="_blank"> 11 字符串的方法二.cs</a></li>
+                    <li><a href="csharp/0047.html" class="content" target="_blank"> 12 继承.cs</a></li>
+                    <li><a href="csharp/0048.html" class="content" target="_blank"> 13 new隐藏父类成员.cs</a></li>
+                    <li><a href="csharp/0049.html" class="content" target="_blank"> 14 里氏转换.cs</a></li>
+                    <li><a href="csharp/0050.html" class="content" target="_blank"> 15 随机整数.cs</a></li>
+                    <li><a href="csharp/0051.html" class="content" target="_blank"> 16 ArrayList集合.cs</a></li>
+                    <li><a href="csharp/0052.html" class="content" target="_blank"> 17 集合的长度问题.cs</a></li>
+                    <li><a href="csharp/0053.html" class="content" target="_blank"> 18 Hashtable集合.cs</a></li>
+                    <li><a href="csharp/0054.html" class="content" target="_blank"> 19 Path静态类.cs</a></li>
+                    <li><a href="csharp/0055.html" class="content" target="_blank"> 19 简繁转换.cs</a></li>
+                    <li><a href="csharp/0056.html" class="content" target="_blank"> 20 File静态类.cs</a></li>
+                    <li><a href="csharp/0057.html" class="content" target="_blank"> 21 文件的读写.cs</a></li>
+                    <li><a href="csharp/0058.html" class="content" target="_blank"> 22 List泛型集合.cs</a></li>
+                    <li><a href="csharp/0059.html" class="content" target="_blank"> 23 装箱和拆箱.cs</a></li>
+                    <li><a href="csharp/0060.html" class="content" target="_blank"> 24 字典泛型集合.cs</a></li>
+                    <li><a href="csharp/0061.html" class="content" target="_blank"> 25 文件流读写文件.cs</a></li>
+                    <li><a href="csharp/0062.html" class="content" target="_blank"> 26 大文件的复制.cs</a></li>
+                    <li><a href="csharp/0063.html" class="content" target="_blank"> 26 流读写文件.cs</a></li>
+                    <li><a href="csharp/0064.html" class="content" target="_blank"> 27 多态.cs</a></li>
+                    <li><a href="csharp/0065.html" class="content" target="_blank"> 28 抽象类.cs</a></li>
+                    <li><a href="csharp/0066.html" class="content" target="_blank"> 29 访问权限修饰符.cs</a></li>
+                    <li><a href="csharp/0067.html" class="content" target="_blank"> 30 简单工厂设计模式.cs</a></li>
+                    <li><a href="csharp/0068.html" class="content" target="_blank"> 31 值传递和引用传递.cs</a></li>
+                    <li><a href="csharp/0069.html" class="content" target="_blank"> 32 序列化和反序列化.cs</a></li>
+                    <li><a href="csharp/0070.html" class="content" target="_blank"> 33 部分类.cs</a></li>
+                    <li><a href="csharp/0071.html" class="content" target="_blank"> 34 密封类.cs</a></li>
+                    <li><a href="csharp/0072.html" class="content" target="_blank"> 35 重写ToString.cs</a></li>
+                    <li><a href="csharp/0073.html" class="content" target="_blank"> 36 接口简介.cs</a></li>
+                    <li><a href="csharp/0074.html" class="content" target="_blank"> 37 接口的特点.cs</a></li>
+                    <li><a href="csharp/0075.html" class="content" target="_blank"> 38 显式实现接口.cs</a></li>
+                    <li><a href="csharp/0076.html" class="content" target="_blank"> 39 MD5加密.cs</a></li>
                 </ul>
             </li>
         </ul>
