--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
 			}
 			#lan{
 				/* 修改头部选项栏长度 */
-				width: 600px;
+				width: 720px;
 				height: 34px;
 				position: relative;
 				margin: auto;
@@ -176,6 +176,7 @@
 	<body style="background-color: rgb(13, 17, 22);" id="main">
 		<div class="background">
 			<h1 style="text-align: center; color: rgb(0, 198, 198);">欢迎，这里是DarkStarLan主页</h1>
+			<h1 style="text-align: center; color: #91404c;">喜迎2024!&nbsp;&nbsp;&nbsp;&nbsp;新年快乐!</h1>
 			<hr>
 			<div id="lan">
 				<div class="class1">
@@ -191,6 +192,11 @@
 				<div class="class1">
 					<a href="https://github.com/">
 						<button class="right">GitHub</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/brief.html">
+						<button class="right">个人简介</button>
 					</a>
 				</div>
 				<div class="class1">
