--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
 			}
 			#lan{
 				/* 修改头部选项栏长度 */
-				width: 600px;
+				width: 720px;
 				height: 34px;
 				position: relative;
 				margin: auto;
@@ -202,6 +202,11 @@
 				<div class="class1">
 					<a href="https://darkstarlan.github.io/notes/content.html">
 						<button class="right">学习笔记</button>
+					</a>
+				</div>
+				<div class="class1">
+					<a href="https://darkstarlan.github.io/information/near_water.html">
+						<button class="right">公共资料</button>
 					</a>
 				</div>
 			</div>
