--- a/information/near_water.html
+++ b/information/near_water.html
@@ -230,7 +230,7 @@
 					<p>&nbsp;</p>
 					<p>近水饮料——或许很多人对这个概念还很陌生。但如果说“脉动”“海之言”“苏打汽水”“水溶C”“沁拧水”，包括一些乳酸菌水等，就是近水饮料，大家就会恍然大悟。</p>
 					<p>其实，近水饮料配方大都以水、维生素、微量矿物质以及一些果味添加剂为主，颜色近乎透明，但是比水更有味道，不像碳酸饮料那么“凶猛”。作为水和果汁间的过渡产品，近水饮料受到消费者欢迎。</p>
-					<p style="text-align: center;"><img alt="近水饮料" align="right" hspace="20px" vspace="20px" src="http://dzb.xfrb.com.cn/UploadFiles/image/20200228/1582877776456424.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="近水饮料" align="right" hspace="20px" vspace="20px" src="./img/near_water.jpg" style="width: 600px; height: 451px;"></p>
 					<h2 style="color: gold;">&nbsp;&nbsp;种类繁多 价格略高</h2>
 					<p>不少消费者都注意到，今年夏天，走进任何一家超市或便利店都会发现，以往以碳酸饮料和调和果汁、茶饮料为主的饮品货架让口味清淡的近水饮料占了半壁江山，甚至有些商超饮品货架和冷柜的黄金位置都被近水饮料占据。好邻居便利店永定路店内工作人员告诉记者：“今年夏季已过半，通过统计发现，往年很受欢迎的碳酸饮料和果汁饮品明显在今年冲劲儿不足，而取代它们的则是口味清淡的饮品，有些卖得好的轻口味饮品还经常断货。另外，今年不少饮料厂家都推出了新品，消费者在选择上也不再像之前那样单一。除了老牌近水饮料‘脉动’和‘海之言’之外，农夫山泉的‘水’系列、‘水溶C’和三得利的‘沁’系列、今麦郎的芒顿小镇系列以及统一新出的乳酸菌水很受消费者欢迎。”“夏天如果不喝点饮料，感觉就缺少点什么似的，尤其是现在的一些‘轻口味’饮品，既能满足口味又能多些健康，并且有的‘轻口味’饮料还有功能性，比如说，一些苏打水还有改变人体酸碱程度的效果。今年我几乎就没喝过其他饮料，都已‘轻口味’饮料为主，也希望商家以后能推出更多品种和口味，满足大家的需求。”消费者黄莉莉对记者说。</p>
 					<p>记者调查发现，近水饮料的价格相比较于普通碳酸饮料、茶饮料和果汁饮料略高，其中乳酸菌饮料的价格最高，500毫升的价格为6.5元；其次是维生素功能饮料，600毫升的价格为5.5元。平均来看，近水饮料每500毫升的价格都在5元上下，明显高于其他饮料每500毫升3元上下。“虽说近水饮料价格贵了一些，但是感觉更健康，因为看起来几乎是透明的，肯定不像其他饮料有那么多色素和香精，并且现在种类越来越多，从苏打水到各种果味水、乳酸菌水，甚至网红饮料崂山白花蛇草水都是近水‘大家族’之一，选择上很丰富，一点都不逊色于其他饮料的种类。”消费者常山说。</p>
