--- a/information/near_water.html
+++ b/information/near_water.html
@@ -4,192 +4,55 @@
 		<meta charset="utf-8">
 		<title></title>
 		<style type="text/css">
-			.lifang{
-				width: 200px;
-				height: 200px;
-				margin: 200px;
-				position: relative;
-				/* 设置transfo-style:保留子元素3D效果 */
-				transform-style: preserve-3d;
-				transform: rotate3d(1,1,1,0deg);
-				transition: all 5s;
-			}
-			.lifang:hover{
-				transform: rotate3d(1,1,1,720deg);
-			}
-			.page{
-				width: 200px;
-				height: 200px;
-				position: absolute;
-				left: 0;
-				top: 0;
-				/* 设定透明度 */
-				opacity: 1;
-				
-			}
-			
-			.Front{
-				background-color: orange;
-				background-size: 100% auto;
-				transform: translateZ(100px);
-			}
-			.Back{
-				background-color: red;
-				background-size: 100% auto;
-				transform: translateZ(-100px);
-			}
-			.Right{
-				background-color: blue;
-				background-size: 100% auto;
-				transform: rotateY(90deg) translateZ(100px);
-			}
-			.Left{
-				background-color: green;
-				background-size: 100% auto;
-				transform: rotateY(-90deg) translateZ(100px);
-			}
-			.Top{
-				background-color: yellow;
-				background-size: 100% auto;
-				transform: rotateX(90deg) translateZ(100px);;
-			}
-			.Bottom{
-				background-color: white;
-				background-size: 100% auto;
-				transform: rotateX(-90deg) translateZ(100px);;
-			}
-			.background{
-				width: auto;
-				height: 1000px;
-			}
-			#lan{
-				/* 修改头部选项栏长度 */
-				width: 600px;
-				height: 34px;
-				position: relative;
-				margin: auto;
-			}
-			.right{
-				/* 按钮属性 */
-				font-size: 20px;
-				width: 100px;
-				border-radius: 6px;
-				height: 34px;
-				box-shadow: 0 0 0px #999;
-				transition: all 0.2s;
-				position: relative;
-				left: 10px;
-			}
-			.right:hover{
-				color: orangered;
-				background: skyblue;
-				box-shadow: 0 5px 10px #999;
-			}
-			.class1{
-				/* 按钮间隔 */
-				width: 120px;
-				height: 34px;
-				float: left;
-				position: relative;
-			}
-			#d0{
-				width: 300px;
-				height: 429px;
-				position: relative;
-				/* margin: auto; */
-				background: #91404c;
-				border-radius: 20px;
-				position: relative;
-				left: 20px;
-				transition: all 0.2s;
-			}
-			#d0:hover{
-				box-shadow: 2px 2px 10px #808080;
-			}
-			#d1{
-				/* background: skyblue; */
-				width: 230px;
-				height: 255px;
-				position: relative;
-				margin: auto;
-				top: 28px;
-			}
-			.c1{
-				width: 220px;
-				height: 30px;
-				border-radius: 4px;
-				position: relative;
-				left: 1px;
-			}
-			text{
-				display: inline-block;
-				height: 32px;
-				font-size: 20px;
-				line-height: 32px;
-				color: #bea1a1;
-				text-align: center;
-				position: relative;
-				left: 5px;
-			}
-			#bt1{
-				text-align: center;
-				font-weight: 900;
-				font-size: 16px;
-				/* color: transparent; */
-				background: aquamarine;
-				width: 30px;
-				height: 30px;
-				border-radius: 40px;
-				position: relative;
-				top: 12px;
-				left: 100px;
-				/* transition: all 0.4s,color 0.2s; */
-				transition: all 0.4s;
-			}
-			#bt1:hover{
-				background: limegreen;
-				box-shadow: 0 0 5px orangered,0 0 20px yellow;
-				/* color: blue; */
-				border-radius: 3px;
-				width: 60px;
-				height: 30px;
-				left: 85px;
-				/* transition: all 0.4s,color 1s; */
-			}
-			#footer {
-			    height: 40px;
-	            line-height: 40px;
-	            /* position: fixed; */
-	            bottom: 0;
-                width: 100%;
-                text-align: center;
-		        background: #333;
-		        color: #fff;
-                font-family: Arial;
-		        font-size: 16px;
-		        letter-spacing: 1px;
-			}
-			.articlep {
-				padding-left: 20px;
-				padding-right: 20px;
-				font-family: Arial;
-				font-size: 18px;
-				width: auto;
-				color: rgb(201, 201, 89);;
-				line-height: 40px;
-				text-indent: 2em;
-			}
-			.articletitle {
-				padding-left: 100px;
-				font-family: Arial;
-				color: #fff;
-				border-radius: 3px;
-				width: auto;
-			}
+			@import url("../css/lantern.css");
 		</style>
 	</head>
 	<body style="background-color: rgb(13, 17, 22);" id="main">
 		<div class="background">
+			<!-- 灯笼 -->
+			<div>
+				<!-- 灯笼1 -->
+				<div class="deng-box1">
+					<div class="deng">
+						<div class="xian"></div>
+						<div class="deng-a">
+							<div class="deng-b"><div class="deng-t">新</div></div>
+						</div>
+						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+					</div>
+				</div>
+				<!-- 灯笼2 -->
+				<div class="deng-box2">
+					<div class="deng">
+						<div class="xian"></div>
+						<div class="deng-a">
+							<div class="deng-b"><div class="deng-t">年</div></div>
+						</div>
+						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+					</div>
+				</div>
+				<!-- 灯笼3 -->
+				<div class="deng-box3">
+					<div class="deng">
+						<div class="xian"></div>
+						<div class="deng-a">
+							<div class="deng-b"><div class="deng-t">快</div></div>
+						</div>
+						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+					</div>
+				</div>
+				<!-- 灯笼4 -->
+				<div class="deng-box4">
+					<div class="deng">
+						<div class="xian"></div>
+						<div class="deng-a">
+							<div class="deng-b"><div class="deng-t">乐</div></div>
+						</div>
+						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
+					</div>
+				</div>
+			</div>
+			<!-- 主要部分 -->
 			<h1 style="text-align: center; color: rgb(0, 198, 198);">关于近水饮料</h1>
 			<hr>
 			<div id="lan">
