--- a/information/near_water.html
+++ b/information/near_water.html
@@ -5,54 +5,27 @@
 		<title></title>
 		<style type="text/css">
 			@import url("../css/lantern.css");
+			.articlep {
+				padding-left: 20px;
+				padding-right: 20px;
+				font-family: Arial;
+				font-size: 18px;
+				width: auto;
+				color: rgb(201, 201, 89);;
+				line-height: 40px;
+				text-indent: 2em;
+			}
+			.articletitle {
+				padding-left: 100px;
+				font-family: Arial;
+				color: #fff;
+				border-radius: 3px;
+				width: auto;
+			}
 		</style>
 	</head>
 	<body style="background-color: rgb(13, 17, 22);" id="main">
 		<div class="background">
-			<!-- 灯笼 -->
-			<div>
-				<!-- 灯笼1 -->
-				<div class="deng-box1">
-					<div class="deng">
-						<div class="xian"></div>
-						<div class="deng-a">
-							<div class="deng-b"><div class="deng-t">新</div></div>
-						</div>
-						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
-					</div>
-				</div>
-				<!-- 灯笼2 -->
-				<div class="deng-box2">
-					<div class="deng">
-						<div class="xian"></div>
-						<div class="deng-a">
-							<div class="deng-b"><div class="deng-t">年</div></div>
-						</div>
-						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
-					</div>
-				</div>
-				<!-- 灯笼3 -->
-				<div class="deng-box3">
-					<div class="deng">
-						<div class="xian"></div>
-						<div class="deng-a">
-							<div class="deng-b"><div class="deng-t">快</div></div>
-						</div>
-						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
-					</div>
-				</div>
-				<!-- 灯笼4 -->
-				<div class="deng-box4">
-					<div class="deng">
-						<div class="xian"></div>
-						<div class="deng-a">
-							<div class="deng-b"><div class="deng-t">乐</div></div>
-						</div>
-						<div class="shui shui-a"><div class="shui-c"></div><div class="shui-b"></div></div>
-					</div>
-				</div>
-			</div>
-			<!-- 主要部分 -->
 			<h1 style="text-align: center; color: rgb(0, 198, 198);">关于近水饮料</h1>
 			<hr>
 			<div id="lan">
