--- a/home.html
+++ b/home.html
@@ -6,6 +6,11 @@
 		<title></title>
 		<style type="text/css">
 			@import url("./css/lantern.css");
+			@import url("./css/main.css");
+			@import url("./css/mouse.css");
+			body{
+				/* cursor:url("../DarkStarLan/img/pointer1.png"), auto; */
+			}
 		</style>
 	</head>
 	<!-- <script src="change.js" type="text/javascript"></script> -->
@@ -128,5 +133,7 @@
 			</div>
 			<div id="footer">感谢您的浏览，本网页由DarkStarLan搭建</div>
 		</div>
+		<!-- JS code -->
+		<script type="text/javascript" src="./js/mouse3.js"></script>
 	</body>
 </html>
