--- a/information/near_water.html
+++ b/information/near_water.html
@@ -5,6 +5,7 @@
 		<title></title>
 		<style type="text/css">
 			@import url("../css/lantern.css");
+			@import url("../css/main.css");
 			.articlep {
 				padding-left: 20px;
 				padding-right: 20px;
