--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 	<!-- https://blog.csdn.net/qq_43592352/article/details/88625248 -->
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<link rel = "icon" href = "./img/logo.ico">
+		<title>DarkStarLan欢迎您</title>
 		<style type="text/css">
 			@import url("./css/lantern.css");
 			@import url("./css/main.css");
@@ -58,8 +59,8 @@
 				</div>
 			</div>
 		</div>
+		<!-- 主要部分 -->
 		<div class="background">
-			<!-- 主要部分 -->
 			<h1 style="text-align: center; color: rgb(0, 198, 198);">欢迎，这里是DarkStarLan主页</h1>
 			<h1 style="text-align: center; color: #91404c;">喜迎2024!&nbsp;&nbsp;&nbsp;&nbsp;新年快乐!</h1>
 			<hr>
