--- a/information/near_water.html
+++ b/information/near_water.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<link rel = "icon" href = "../img/logo.ico">
+		<title>近水饮料公开资料</title>
 		<style type="text/css">
 			@import url("../css/lantern.css");
 			@import url("../css/main.css");
