--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
 					</a>
 				</div>
 				<div class="class1">
-					<a href="https://darkstarlan.github.io/download/cpp.html">
+					<a href="https://darkstarlan.github.io/download/music_player.html">
 						<button class="right">相关下载</button>
 					</a>
 				</div>
