--- a/information/near_water.html
+++ b/information/near_water.html
@@ -7,6 +7,10 @@
 		<style type="text/css">
 			@import url("../css/lantern.css");
 			@import url("../css/main.css");
+			#lan{
+				/* 修改头部选项栏长度 */
+				width: 600px;
+			}
 			.articlep {
 				padding-left: 20px;
 				padding-right: 20px;
