--- a/search.html
+++ b/search.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<link rel = "icon" href = "./img/logo.ico">
+		<title>网址导航页</title>
 		<style type="text/css">
 			.clear:after{
 				content: "";
