--- a/notes/content.html
+++ b/notes/content.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" href = "../img/logo.ico">
     <title>学习笔记目录</title>
     <style>
         #lan{
@@ -114,7 +115,7 @@
                 </a>
             </div>
             <div class="class1">
-                <a href="https://darkstarlan.github.io/download/cpp.html">
+                <a href="https://darkstarlan.github.io/download/music_player.html">
                     <button class="right">相关下载</button>
                 </a>
             </div>
