--- a/information/near_water.html
+++ b/information/near_water.html
@@ -77,6 +77,7 @@
 			</div>
 			<!-- 主要部分 -->
 			<h1 style="text-align: center; color: rgb(0, 198, 198);">关于近水饮料</h1>
+			<h1 style="text-align: center; color: #91404c;">喜迎2024!&nbsp;&nbsp;&nbsp;&nbsp;新年快乐!</h1>
 			<hr>
 			<div id="lan">
 				<div class="class1">
