--- a/information/tea.html
+++ b/information/tea.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel = "icon" href = "../img/logo.ico">
-		<title>近水饮料公开资料</title>
+		<title>茶水的储存</title>
 		<style type="text/css">
 			@import url("../css/lantern.css");
 			@import url("../css/main.css");
