--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
 					</a>
 				</div>
 				<div class="class1">
-					<a href="https://darkstarlan.github.io/information/near_water.html">
+					<a href="https://darkstarlan.github.io/information/tea.html">
 						<button class="right">公共资料</button>
 					</a>
 				</div>
