--- a/information/tea.html
+++ b/information/tea.html
@@ -116,7 +116,7 @@
 				<div class="articlep">
 					<p>&nbsp;</p>
 					<p>在传统文化中，茶叶一直有着重要的地位，在我国，茶是一种广泛存在的饮品，痴迷茶叶的人不在少数。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_01.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_01.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>日常生活中，我们常常会遇到这样的情况：泡了一杯茶，没喝完就放置了一夜。</p>
 					<p>对于隔夜茶是否还能喝，大家的观点各不相同。</p>
 					<p>有人认为隔夜茶是“害人水”，不仅有毒还致癌，也有人觉得喝隔夜茶并无大碍。</p>
@@ -124,42 +124,42 @@
 					<p>隔夜茶可以喝吗？</p>
 					<p>今天，我们就来深入探讨一下隔夜茶到底能不能喝？并结合相关的研究数据为您揭晓答案。</p>
 					<p>首先，我们来了解一下什么是隔夜茶？隔夜茶一般是指冲泡后放置时间过久的茶，不一定是隔了一夜，比如从早上放置到深夜，也可以算是隔夜茶。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_02.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_02.jpeg" style="width: 600px; height: 451px;"></p>
 					<h2 style="color: gold;">&nbsp;&nbsp;为什么会有人认为隔夜茶不能喝？</h2>
 					<p>其中一个常见的担忧是认为隔夜茶会滋生大量细菌。</p>
 					<p>但科学研究表明，将新泡的茶和放置了 24 小时的茶进行细菌培养对比，发现两者的细菌数量差异并不显著， 均小于10CFU/mL ，属于安全范围内（《GB 5749-2006 生活饮用水卫生标准》对生活饮用水菌落总数的限量要求是小于100CFU/mL，隔夜茶中的菌落总数要远低于这个限量标准）。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_03.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_03.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>只要保存得当，隔夜茶中的细菌数量并不会对人体健康造成威胁。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_04.jpg" style="width: 600px; height: 451px;"></p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_05.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_04.jpeg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_05.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>数据及图片来自：老爸测评</p>
 					<p>还有一种观点认为隔夜茶会产生有害物质，比如亚硝酸盐。</p>
 					<p>然而，实际的数据却给出了不同的答案。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_06.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_06.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>以绿茶为例，研究发现，虽然放置一夜后其亚硝酸盐的含量上升为1.2mg/kg。其亚硝酸盐的含量也远远低于国家规定的食品安全标准。</p>
 					<p>一般来说，正常饮用隔夜绿茶所摄入的亚硝酸盐量，甚至比我们从日常的二次加热的蔬菜中摄入的还要少。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_07.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_07.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>数据及图片来自：老爸测评</p>
 					<p>再来说说红茶，红茶经过发酵工艺，其成分相对稳定。</p>
 					<p>实验检测显示，隔夜的红茶的亚硝酸盐，与新泡的红茶相比，甚至还下降了很多。</p>
 					<p>只要保存环境干净、低温且密封，隔夜红茶的品质和安全性是有保障的。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_08.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_08.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>乌龙茶作为半发酵茶，情况也类似。在合理保存的条件下，隔夜乌龙茶中的亚硝酸盐成分的含量变化不大。</p>
 					<p>再来看茶多酚含量，作为茶叶中重要的营养成分，它具有抗氧化、抑菌、降血糖血脂等作用。</p>
 					<p>检测发现，茶多酚含量比较高的绿茶，隔夜的和刚泡好的相差并不大。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_09.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_09.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>数据及图片来自：老爸测评</p>
 					<p>综合以上研究数据，我们可以得出结论：在一定条件下，隔夜茶是可以喝的。</p>
 					<p>但也要取决于茶叶的种类、保存条件和放置时间等多种因素。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_10.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_10.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>对于绿茶、红茶和乌龙茶，如果保存得当（密封、低温），隔夜后在较短时间内（一般不超过 24 小时）饮用，可能不会对健康产生太大影响。</p>
 					<h2 style="color: gold;">&nbsp;&nbsp;但如果保存不当，出现异味、浑浊、变色等情况，则应避免饮用。</h2>
 					<p>为了保证茶叶的品质和饮用安全，建议尽量饮用新鲜泡制的茶。如果确实有剩余的茶水，应及时妥善保存，以减少变质的风险。</p>
 					<h2 style="color: gold;">&nbsp;&nbsp;另外，需要提醒大家的是，在日常生活中真正需要注意的是以下两种茶：</h2>
 					<p>烫茶：一般温度＞65℃就被称之为烫茶，世卫组织将65℃以上的热饮列为了2A类致癌物。长期饮用烫茶会导致食管黏膜灼伤，增加诱发癌症的几率。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_11.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_11.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>浓茶：浓茶含有较多的鞣酸、氟元素等，长期饮用可能会在肾脏内堆积，诱发肾脏损伤、肾结石；其中的茶碱成分会刺激胃酸分泌，大量摄入可能损伤胃黏膜，引发胃溃疡、胃炎等疾病；而且饮用浓茶还会影响身体对钙、铁的吸收，容易诱发骨质疏松、缺铁性贫血等。</p>
-					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_12.jpg" style="width: 600px; height: 451px;"></p>
+					<p style="text-align: center;"><img alt="茶" align="right" hspace="20px" vspace="20px" src="./img/tea_12.jpeg" style="width: 600px; height: 451px;"></p>
 					<p>希望通过以上的介绍，能让你对隔夜茶有更清晰的认识。在享受茶饮带来的愉悦的同时，也能关注健康，做出明智的选择。</p>
 					<p>（以上内容仅供参考，具体数据可能因实验条件和样本差异而有所不同。）</p>
 					<h2 style="color: gold;">&nbsp;&nbsp;参考资料：</h2>
