--- a/information/tea.html
+++ b/information/tea.html
@@ -76,7 +76,7 @@
 				</div>
 			</div>
 			<!-- 主要部分 -->
-			<h1 style="text-align: center; color: rgb(0, 198, 198);">关于近水饮料</h1>
+			<h1 style="text-align: center; color: rgb(0, 198, 198);">关于茶水的储存</h1>
 			<h1 style="text-align: center; color: #91404c;">喜迎2024!&nbsp;&nbsp;&nbsp;&nbsp;新年快乐!</h1>
 			<hr>
 			<div id="lan">
